--- a/PSPDFKit.Android/PSPDFKit.Android.csproj
+++ b/PSPDFKit.Android/PSPDFKit.Android.csproj
@@ -12,6 +12,7 @@
     <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
     <AssemblyName>PSPDFKit.Android</AssemblyName>
     <TargetFrameworkVersion>v4.1</TargetFrameworkVersion>
+    <JavaOptions>$(JavaOptions) -noverify </JavaOptions>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -64,6 +65,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Additions\PSPDFSearchViewInline.cs" />
     <Compile Include="Additions\PSPDFSearchViewModular.cs" />
+    <Compile Include="Additions\AnnotationCreationToolbar.cs" />
+    <Compile Include="Additions\AnnotationEditingToolbar.cs" />
+    <Compile Include="Additions\DocumentEditingToolbar.cs" />
+    <Compile Include="Additions\TextSelectionToolbar.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Additions\AboutAdditions.txt" />
@@ -76,10 +81,10 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedReferenceJar Include="Jars\rxandroid-1.2.1.jar" />
-    <EmbeddedReferenceJar Include="Jars\rxjava-1.1.9.jar" />
+    <EmbeddedReferenceJar Include="Jars\rxjava-1.2.0.jar" />
   </ItemGroup>
   <ItemGroup>
-    <LibraryProjectZip Include="Jars\pspdfkit-2.5.1.aar" />
+    <LibraryProjectZip Include="Jars\pspdfkit-2.6.0.aar" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedJar Include="Jars\YouTubeAndroidPlayerApi-1.2.2\libs\YouTubeAndroidPlayerApi.jar">
