--- a/PSPDFKit.Android/Makefile
+++ b/PSPDFKit.Android/Makefile
@@ -1,17 +1,20 @@
 MONOXBUILD=/Library/Frameworks/Mono.framework/Commands/xbuild
-PDFKITVERSION=2.9.4
-RXANDROIDVERSION=1.2.1
-RXJAVAVERSION=1.2.7
+PDFKITVERSION=3.1.1
+RXANDROIDVERSION=2.0.1
+RXJAVAVERSION=2.0.8
 YOUTUBEVERSION=1.2.2
-RXANDROIDURL=http://search.maven.org/remotecontent?filepath=io/reactivex/rxandroid/$(RXANDROIDVERSION)/rxandroid-$(RXANDROIDVERSION).aar
-RXJAVAURL=http://search.maven.org/remotecontent?filepath=io/reactivex/rxjava/$(RXJAVAVERSION)/rxjava-$(RXJAVAVERSION).jar
+REACTIVESTREAMSVERSION=1.0.0.final
+RXANDROIDURL=http://search.maven.org/remotecontent?filepath=io/reactivex/rxjava2/rxandroid/$(RXANDROIDVERSION)/rxandroid-$(RXANDROIDVERSION).aar
+RXJAVAURL=http://search.maven.org/remotecontent?filepath=io/reactivex/rxjava2/rxjava/$(RXJAVAVERSION)/rxjava-$(RXJAVAVERSION).jar
 YOUTUBEURL=https://developers.google.com/youtube/android/player/downloads/YouTubeAndroidPlayerApi-$(YOUTUBEVERSION).zip
+REACTIVESTREAMSURL=http://search.maven.org/remotecontent?filepath=org/reactivestreams/reactive-streams/$(REACTIVESTREAMSVERSION)/reactive-streams-$(REACTIVESTREAMSVERSION).jar
 
 all: PSPDFKit.Android.dll
 
 getallthethings:
 	curl -L -o Jars/rxandroid-$(RXANDROIDVERSION).aar $(RXANDROIDURL)
 	curl -L -o Jars/rxjava-$(RXJAVAVERSION).jar $(RXJAVAURL)
+	curl -L -o Jars/reactive-streams-$(REACTIVESTREAMSVERSION).jar $(REACTIVESTREAMSURL)
 	curl -L -o Jars/YouTubeAndroidPlayerApi-$(YOUTUBEVERSION).zip $(YOUTUBEURL)
 
 extractaars: getallthethings
