[PSPDFKit.Android] Update xamarin bindings to v4.5.1

--- a/PSPDFKit.Android.Instant/PSPDFKit.Android.Instant.csproj
+++ b/PSPDFKit.Android.Instant/PSPDFKit.Android.Instant.csproj
@@ -89,6 +89,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Additions\InstantPdfDocument.cs" />
+    <Compile Include="Additions\IInstantAnnotationProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Additions\AboutAdditions.txt" />
@@ -111,7 +112,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <LibraryProjectZip Include="Jars\pspdfkit-instant-4.4.1.aar" />
+    <LibraryProjectZip Include="Jars\pspdfkit-instant-4.5.1.aar" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Annotations.26.0.2\build\MonoAndroid80\Xamarin.Android.Support.Annotations.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Annotations.26.0.2\build\MonoAndroid80\Xamarin.Android.Support.Annotations.targets')" />
