--- a/samples/PSPDFCatalog/packages.config
+++ b/samples/PSPDFCatalog/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AndHUD" version="1.2.0" targetFramework="monoandroid80" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="monoandroid80" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid80" />
   <package id="Plugin.Permissions" version="2.2.1" targetFramework="monoandroid80" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid80" />
@@ -20,5 +21,5 @@
   <package id="Xamarin.Android.Support.v7.Palette" version="26.0.2" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="26.0.2" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Forms" version="2.5.0.280555" targetFramework="monoandroid80" />
+  <package id="Xamarin.Forms" version="2.5.1.444934" targetFramework="monoandroid80" />
 </packages>
