[PSPDFKit.Android] Update Bindings to v6.3.0

--- a/samples/AndroidSample/AndroidSample/pspdfkit-proguard.cfg
+++ b/samples/AndroidSample/AndroidSample/pspdfkit-proguard.cfg
@@ -1,20 +1,20 @@
 -dontwarn com.android.tools.lint.**
 -dontwarn org.conscrypt.ConscryptHostnameVerifier
+-dontwarn com.google.android.youtube.player.**
 
-# Keep PSPDFKit framework classes – they are already proguarded by default.
--keep class com.pspdfkit.framework.** { *; }
+# Keep PSPDFKit internal classes – they are already proguarded by default.
+-keep class com.pspdfkit.internal.** { *; }
 -keep class com.pspdfkit.datastructures.Range { *; }
 -keep class com.pspdfkit.exceptions.** { *; }
 -keep class com.pspdfkit.undo.exceptions** { *; }
 -keep class com.pspdfkit.utils.** { *; }
 
-# Keep PSPDFKit Instant framework classes – they are already proguarded by default.
--keep class com.pspdfkit.instant.framework.** { *; }
+# Keep PSPDFKit Instant internal classes – they are already proguarded by default.
+-keep class com.pspdfkit.instant.internal.** { *; }
 -keep class com.pspdfkit.instant.exceptions.** { *; }
 -keep class com.pspdfkit.instant.ui.** { *; }
 
 -keepparameternames
--renamesourcefileattribute SourceFile
 -keepattributes Exceptions
 -keepattributes InnerClasses
 -keepattributes Signature
@@ -87,6 +87,7 @@
 -dontwarn com.getkeepsafe.relinker.**
 -dontwarn com.facebook.device.yearclass.**
 -dontwarn sun.misc.**
+-dontwarn com.pspdfkit.internal.**
 
 # OkHttp is used by PSPDFKit Instant and needs these lines for proper operation.
 -keep class okhttp3.** { *; }
