--- a/PSPDFKit.Android/PSPDFKit.Android.csproj
+++ b/PSPDFKit.Android/PSPDFKit.Android.csproj
@@ -12,7 +12,7 @@
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <AssemblyName>PSPDFKit.Android</AssemblyName>
-    <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v10.0</TargetFrameworkVersion>
     <JavaOptions>$(JavaOptions) -noverify </JavaOptions>
     <AndroidClassParser>class-parse</AndroidClassParser>
     <AndroidCodeGenTarget>XAJavaInterop1</AndroidCodeGenTarget>
@@ -81,7 +81,7 @@
     <!-- <EmbeddedReferenceJar Include="Jars\okio-1.13.0.jar" /> -->
   </ItemGroup>
   <ItemGroup>
-    <LibraryProjectZip Include="Jars\pspdfkit-6.2.0.aar" />
+    <LibraryProjectZip Include="Jars\pspdfkit-6.3.0.aar" />
   </ItemGroup>
   <!-- <ItemGroup>
     <EmbeddedJar Include="Jars\YouTubeAndroidPlayerApi-1.2.2\libs\YouTubeAndroidPlayerApi.jar">
@@ -89,57 +89,20 @@
     </EmbeddedJar>
   </ItemGroup> -->
   <ItemGroup>
-    <PackageReference Include="Xamarin.AndroidX.Migration">
-      <Version>1.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4">
-      <Version>1.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.AppCompat">
-      <Version>1.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.RecyclerView">
-      <Version>1.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.CardView">
-      <Version>1.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.GridLayout">
-      <Version>1.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.Palette">
-      <Version>1.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.v4">
-      <Version>28.0.0.3</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Google.Android.Material">
-      <Version>1.1.0-rc2</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData">
-      <Version>2.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.MultiDex">
-      <Version>2.0.1</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.Browser">
-      <Version>1.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Square.OkHttp3">
-      <Version>4.2.2</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Kotlin.StdLib">
-      <Version>1.3.50.1</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.YouTube.Player.Android">
-      <Version>1.2.2</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Android.ReactiveX.RxAndroid">
-      <Version>2.1.1</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Android.ReactiveX.RxJava">
-      <Version>2.2.7</Version>
-    </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.1.0" />
+    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.1.0" />
+    <PackageReference Include="Xamarin.AndroidX.CardView" Version="1.0.0" />
+    <PackageReference Include="Xamarin.AndroidX.GridLayout" Version="1.0.0" />
+    <PackageReference Include="Xamarin.AndroidX.Palette" Version="1.0.0" />
+    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.1.0-rc3" />
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.2.0" />
+    <PackageReference Include="Xamarin.AndroidX.MultiDex" Version="2.0.1" />
+    <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.2.0" />
+    <PackageReference Include="Square.OkHttp3" Version="4.2.2" />
+    <PackageReference Include="Xamarin.Kotlin.StdLib" Version="1.3.50.1" />
+    <PackageReference Include="Xamarin.Android.ReactiveX.RxAndroid" Version="2.1.1" />
+    <PackageReference Include="Xamarin.Android.ReactiveX.RxJava" Version="2.2.7" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
